Modeling/free_running_kernel_variable_latency/proj_example/solution1/csim/report/example_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../example_test.cpp in debug mode
   Compiling ../../../../example.cpp in debug mode
../../../../example.cpp: In function ‘void example(hls::stream<int, 0>&, hls::stream<int, 0>&, hls::stream<int, 0>&)’:
../../../../example.cpp:86:32: error: no matching function for call to ‘proc_0(hls::stream<int, 16>&, hls::stream<int, 16>&)’
     proc_0(inter[0], mux_in_lat);
                                ^
../../../../example.cpp:27:6: note: candidate: template<int ID> void proc_0(hls::stream<int, 16>&, hls::stream<int, 16>&)
 void proc_0(stream<int,16> &in, stream<int,16> &out)
      ^~~~~~
../../../../example.cpp:27:6: note:   template argument deduction/substitution failed:
../../../../example.cpp:86:32: note:   couldn't deduce template parameter ‘ID’
     proc_0(inter[0], mux_in_lat);
                                ^
make: *** [obj/example.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
